@@ -3,16 +3,30 @@ FROM centos:6
 WORKDIR /opt
 
 ENV JAVA_HOME=/usr/lib/jvm/java-1.7.0-openjdk.x86_64
+ENV PERSEO_FE_URL=perseo_fe_endpoint
+
+COPY . /opt/perseo-core
+WORKDIR /opt/perseo-core
 
 RUN yum update -y && yum install -y wget \
   && wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm && yum localinstall -y --nogpgcheck epel-release-latest-6.noarch.rpm \
-  && yum install -y npm git unzip java-1.7.0-openjdk java-1.7.0-openjdk-devel tomcat \
+  && yum install -y npm git unzip java-1.7.0-openjdk java-1.7.0-openjdk-devel tomcat log4j \
   && wget -c http://ftp.cixug.es/apache/maven/maven-3/3.2.5/binaries/apache-maven-3.2.5-bin.zip && unzip -oq apache-maven-3.2.5-bin.zip \
   && cp -rf apache-maven-3.2.5 /opt/maven && ln -fs /opt/maven/bin/mvn /usr/bin/mvn \
-  && git clone https://github.com/telefonicaid/perseo-core.git && cd perseo-core && mvn package -Dmaven.test.skip=true \
-  && mv target/perseo-core-*.war /usr/share/tomcat/webapps/perseo-core.war \
-  && mkdir /var/log/perseo && chown tomcat:tomcat /var/log/perseo
+  && mvn package -Dmaven.test.skip=true \
+  && mv /opt/perseo-core/target/perseo-core-*.war /usr/share/tomcat/webapps/perseo-core.war \
+  && mkdir /var/log/perseo && chown tomcat:tomcat /var/log/perseo \
+  && echo "# This file should be copied by deployment process" > /etc/perseo-core.properties \
+  && echo "# into /etc/perseo-core.properties, with the appropiate permissions" >>  /etc/perseo-core.properties \
+  && echo "" >>  /etc/perseo-core.properties \
+  && echo "# URL for invoking actions when a rule is fired" >>  /etc/perseo-core.properties \
+  && echo "action.url = http://${PERSEO_FE_URL}/actions/do" >>  /etc/perseo-core.properties \
+  && echo "" >>  /etc/perseo-core.properties \
+  && echo "# Time in milliseconds (long) to \"expire\" a \"dangling\" rule" >>  /etc/perseo-core.properties \
+  && echo "rule.max_age= 60000" >>  /etc/perseo-core.properties \
+  # Optimize Tomcat
+  && echo "JAVA_OPTS=\"-Djava.awt.headless=true -Xmx512m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -Djava.library.path=/usr/lib64:/usr/lib -Djava.security.egd=file:/dev/./urandom\"" >> /usr/share/tomcat/conf/tomcat.conf
 
 EXPOSE 8080
 
-CMD service tomcat start && tail -f /var/log/tomcat/catalina.out
+ENTRYPOINT ["/opt/perseo-core/perseo_core-entrypoint.sh"]
